fix(thread-list): Invisible div extending into thread list blocks clicks

--- a/static/components/list-tabular.less
+++ b/static/components/list-tabular.less
@@ -39,7 +39,7 @@
 
   width: 100%;
   flex-shrink:100;
-  height:49px;
+  height:38px;
   z-index: 10000;
   -webkit-app-region: drag;
 
@@ -197,7 +197,7 @@ body.is-blurred {
     white-space: nowrap;
     text-overflow: ellipsis;
     align-items: center;
-    
+
     &:first-child {
       padding-left: @padding-base-horizontal - 4;
     }
